# mountui

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  Justfile  LICENSE
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-04-20-mountui-design.md
scripts/: install.sh
src/: app.rs  bookmark.rs  config.rs  main.rs
src/mount/: linux.rs  macos.rs  mod.rs
src/ui/: bookmark_list.rs  mod.rs  mount_list.rs  mount_point.rs
