[package]
name = "mountui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "6"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
async-trait = "0.1"
